# onto144-public

./: CODE_OF_CONDUCT.md  CONTRIBUTING.md  Cargo.toml  LICENSE.txt  README.md  SECURITY.md  pyproject.toml
config/: temperament_inversion_map.yaml  wu_xing_cycles.yaml  zodiac.yaml
config/elements/: earth.yaml  fire.yaml  metal.yaml  water.yaml  wood.yaml
config/temperaments/: choleric.yaml  explanations.txt  melancholic.yaml  phlegmatic.yaml  sanguine.yaml
docs/: ARCHITECTURE.md  ONTO16_SPEC.md  PROFILE_GENERATION_RULES.md  TEMPERAMENT_SWITCHING.md  WU_XING_INTERACTIONS.md  domain_lexicon_guidelines.md  integration_guide.md  ontology_design_principles.md  profile_anatomy.md
examples/: 12_active_profiles_cycle.rs  create_custom_profile_template.yaml  load_medical_profile.py  single_profile_demo.rs  wu_xing_collaboration_demo.rs
github/workflows/: ci.yml  license-compliance.yml  profile_audit.yml
lexicons/bridging/: fact_modality_interface.txt  invariant_injection_rules.txt  self_model_boundaries.txt
lexicons/priority-based/1_cultural/: cultural_invariants.txt  ritual_forms.txt  social_proxemics.txt  temperament.txt  zodiac_transitions.txt
lexicons/priority-based/2_activity/: activity_invariants.txt  cognitive_profiles.txt  energy_states.txt  synthetic_roles.txt  task_grammars.txt
lexicons/priority-based/3_legal/: jurisdiction_refs.txt  legal_invariants.txt  liability_boundaries.txt  license_core.txt  new_rights.txt
lexicons/transmodal/: three_laws_of_ontogenesis.txt
profiles/: aquarius-metal-melancholic.sgcl  aquarius-metal-phlegmatic.sgcl  aries-fire-choleric.sgcl  aries-fire-sanguine.sgcl  cancer-water-melancholic.sgcl  cancer-water-sanguine.sgcl  capricorn-earth-melancholic.sgcl  capricorn-earth-phlegmatic.sgcl  gemini-metal-melancholic.sgcl  gemini-metal-phlegmatic.sgcl  leo-fire-choleric.sgcl  leo-fire-sanguine.sgcl  libra-metal-melancholic.sgcl  libra-metal-phlegmatic.sgcl  pisces-water-melancholic.sgcl  pisces-water-sanguine.sgcl  sagittarius-fire-choleric.sgcl  sagittarius-fire-sanguine.sgcl  scorpio-water-melancholic.sgcl  scorpio-water-sanguine.sgcl  taurus-earth-melancholic.sgcl  taurus-earth-phlegmatic.sgcl  virgo-earth-melancholic.sgcl  virgo-earth-phlegmatic.sgcl
profiles/core/: grigio-2026.yaml  lec-2026.yaml  sub_duo-2026.yaml  ugm-2026.yaml
profiles/domain/architecture/: lumina-architect-2026.yaml
profiles/domain/gaming/: onto-gamer-2026.yaml
profiles/domain/legal/: juris-synthetic-2026.yaml
profiles/domain/medical/: med-ai-2026.yaml
scripts/: generate_profiles.py  validate_profiles.sh
specs/: lexicon-format.txt  profile-schema.yaml
src/core/: kernel.rs  sgcl_validator.rs  syntax_semantics.rs
src/io/: emitter_output.rs  transponder_input.rs
src/profile/: generator.rs  profile.rs  subjective_invariants.rs
src/projection/: onto16.rs  projector.rs
src/state/: energy.rs  phase.rs  tension.rs
src/temperament/: attention_model.rs  inversion_matrix.rs
src/wu_xing/: collaboration.rs  cycle.rs
tests/: kernel_invariants.rs  onto16_serialization.rs  profile_generation.rs  temperament_switching.rs  wu_xing_interactions.rs
tests/integration/: test_medical_profile_compliance.py
tests/unit/: test_lexicon_format.py  test_profile_schema_valid.py
tools/: check_profile_lexicon_compliance.py  requirements.txt  validate_lexicon.py  validate_profile.py
