```toml
[package]
name = "onto144"
version = "0.1.0"
edition = "2021"
license = "GPL-3.0-only"
authors = ["onto144 Contributors"]
description = "Synthetic mind kernel with 144 ethically constrained profiles based on zodiac, Wu Xing, and classical temperaments."
homepage = "https://github.com/your-org/onto144"
repository = "https://github.com/your-org/onto144"
keywords = ["synthetic-mind", "ontology", "ethics", "noema", "sgcl"]
categories = ["algorithms", "science", "philosophy"]

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_yaml = "0.9"
thiserror = "1.0"
sha2 = "0.10"
anyhow = "1.0"
log = "0.4"
env_logger = "0.10"
chrono = { version = "0.4", features = ["serde"] }

[dev-dependencies]
criterion = "0.5"

[[bench]]
name = "profile_generation"
harness = false

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
strip = true

[[bin]]
name = "profile_from_birthdate"
path = "src/bin/profile_from_birthdate.rs"
```