```toml
[build-system]
requires = ["maturin>=1.0,<2.0"]
build-backend = "maturin"

[project]
name = "onto144-py"
version = "0.1.0"
description = "Python bindings for the onto144 synthetic mind kernel (Rust core)"
authors = [{ name = "onto144 Contributors" }]
license = { text = "GPL-3.0-only" }
readme = "README.md"
requires-python = ">=3.10"
classifiers = [
    "License :: OSI Approved :: GNU General Public License v3 (GPLv3)",
    "Programming Language :: Rust",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Intended Audience :: Developers",
    "Intended Audience :: Science/Research",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Topic :: Philosophy",
]
dependencies = [
    "pydantic>=2.0",
    "yamlloader>=1.0",
]

[project.optional-dependencies]
cms = ["ontoCMS>=0.3.0"]  # for integration with ontoCMS via Noema core

[tool.maturin]
features = ["pyo3/extension-module"]
module-name = "onto144_py"
bindings = "pyo3"

[tool.black]
line-length = 100
target-version = ['py310']

[tool.isort]
profile = "black"
```